# ghc-whole-program-compiler-project

./: .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  README.md  cabal.project  hie.yaml  stack-ghc-9.6.yaml  stack.yaml
external-stg/: external-stg.cabal  hie.yaml  stack.yaml
external-stg-compiler/: .ghci  LICENSE  external-stg-compiler.cabal  hie.yaml
external-stg-compiler/app/: dce-fullpak.hs  gen-exe.hs  gen-exe2.hs  gen-obj.hs  gen-obj2.hs  mkfullpak.hs  show-ghc-stg.hs
external-stg-compiler/cbits/: ext-stg-liveness.cpp
external-stg-compiler/datalog/: ext-stg-liveness.dl
external-stg-compiler/lib/Stg/DeadFunctionElimination/: Analysis.hs  Facts.hs  StripModule.hs
external-stg-compiler/lib/Stg/GHC/: Backend.hs  Convert.hs  Convert_9_2.hs  Convert_9_4.hs  Convert_9_6.hs  Symbols.hs  ToStg.hs
external-stg-interpreter/: README.md  ext-stg-interpreter-notes  external-stg-interpreter.cabal  hie.yaml  stack.yaml
external-stg-interpreter/app/: ExtStgInterpreter.hs  Main.hs  RunStgiTestsuite.hs
external-stg-interpreter/cbits/: ext-stg-gc.cpp
external-stg-interpreter/data/cbits.so-script/: c
external-stg-interpreter/data/cbits.so-script/c-src/: fake_rts.c  hack.c  hschooks.c
external-stg-interpreter/data/cbits.so-script/cbits-rts.dyn_o/: StgPrimFloat.dyn_o  TTY.dyn_o
external-stg-interpreter/data/cbits.so-script/stub-base.dyn_o/: Blank_stub.dyn_o  ClockGetTime_stub.dyn_o  Internals_stub.dyn_o  RUsage_stub.dyn_o
external-stg-interpreter/datalog/: README  ext-stg-gc.cpp  ext-stg-gc.dl
external-stg-interpreter/datalog/debugger/: DataSize.dl  GCRoot.dl  RetainedSize.dl  StgState.dl  stat01.dl  stat02.dl
external-stg-interpreter/lib/Foreign/LibFFI/: Closure.hsc
external-stg-interpreter/lib/Stg/: Interpreter.hs  rm-tests.py  run-tests.py
external-stg-interpreter/lib/Stg/Interpreter/: Base.hs  BaseState.hs  Debug.hs  Debugger.hs  EmulatedLibFFI.hs  ErrorReport.hs  EvalStg.hs  FFI.hs  GC.hs  IOManager.hs  Monad.hs  PrimCall.hs  Rts.hs  RtsFFI.hs  ThreadScheduler.hs
external-stg-interpreter/lib/Stg/Interpreter/Base/: Atom.hs
external-stg-interpreter/lib/Stg/Interpreter/Debugger/: Datalog.hs  Internal.hs  Region.hs  Retainer.hs  TraverseState.hs  UI.hs
external-stg-interpreter/lib/Stg/Interpreter/ForeignCall/: Interpreted.hs  Native.hs
external-stg-interpreter/lib/Stg/Interpreter/GC/: DeadlockAnalysis.hs  GCRef.hs  LiveDataAnalysis.hs  RetainerAnalysis.hs
external-stg-interpreter/lib/Stg/Interpreter/PrimOp/: Addr.hs  Array.hs  ArrayArray.hs  ByteArray.hs  Char.hs  Compact.hs  Concurrency.hs  DelayWait.hs  Double.hs  Exceptions.hs  Float.hs  GHCiBytecode.hs  Idris.hs  InfoTableOrigin.hs  Int.hs  Int16.hs  Int32.hs  Int64.hs  Int8.hs  MVar.hs  MiscEtc.hs  MutVar.hs  Narrowings.hs  ObjectLifetime.hs  Parallelism.hs  Prefetch.hs  STM.hs  SmallArray.hs  StablePointer.hs  TagToEnum.hs  Unsafe.hs  WeakPointer.hs  Word.hs  Word16.hs  Word32.hs  Word64.hs  Word8.hs
external-stg-interpreter/lib/Stg/Interpreter/Rts/: IOManager.hs  ThreadScheduler.hs
external-stg-interpreter/lib/Stg/Interpreter/State/: Address.hs  Allocator.hs  Atom.hs  Env.hs  Global.hs  Heap.hs  PrimTypes.hs  Rts.hs  Stack.hs  StgState.hs  Thread.hs
external-stg-interpreter/lib/Stg/Interpreter/StateOp/: Allocator.hs  Atom.hs  (+6 more)
external-stg-interpreter/test/PrimOp/: AddrSpec.hs  CharSpec.hs  DoubleSpec.hs  FloatSpec.hs  Int16Spec.hs  Int8Spec.hs  IntSpec.hs  NarrowingsSpec.hs  Word16Spec.hs  Word8Spec.hs  WordSpec.hs
external-stg-syntax/: LICENSE  README.md  external-stg-syntax.cabal  hie.yaml  stack.yaml
external-stg-syntax/lib/Stg/: Syntax.hs
external-stg/app/: ext-stg.hs  fullpak.hs  mkfullpak.hs  stgapp.hs
external-stg/lib/Stg/: Deconstruct.hs  Fullpak.hs  IO.hs  IRLocation.hs  JSON.hs  Pretty.hs  Program.hs  Reconstruct.hs  Syntax.hs  Tickish.hs
external-stg/lib/Stg/Analysis/: Closure.hs  ForeignInfo.hs  LiveVariable.hs
external-stg/lib/Stg/Foreign/: Linker.hs  Stubs.hs
external-stg/lib/Stg/GHC/: Symbols.hs
lambda/: LICENSE  external-stg  hie.yaml  lambda.cabal  stack.yaml
lambda/app/: catlambda.hs  mkfacts.hs  mklampak.hs  strip-fullpak.hs
lambda/datalog/: AST.dl  CBy.dl  Check.dl  Escape-CFA.dl  Escape-PrimOp-Arrays.dl  Escape-PrimOp-MVar.dl  Escape-PrimOp-MutVar.dl  Escape-PrimOp-STM.dl  Escape-PrimOp-StablePtr.dl  Escape-PrimOp-WeakPtr.dl  Escape.dl  LVA.dl  PointsTo.dl  PrimOp-Arrays.dl  PrimOp-Bytecode.dl  PrimOp-CCS.dl  PrimOp-Compact.dl  PrimOp-Concurrency.dl  PrimOp-Exception.dl  PrimOp-MVar.dl  PrimOp-MutVar.dl  PrimOp-Parallelism.dl  PrimOp-STM.dl  PrimOp-StablePtr.dl  PrimOp-TagToEnum.dl  PrimOp-WeakPtr.dl  TODO  c.sh  called-by-outer.dl  lambda-datalog2.todo  main.dl  outer-c.sh
lambda/datalog/non-special-primops/: PrimOp-Addr.dl  PrimOp-ByteArray.dl  PrimOp-DelayWait.dl  PrimOp-Etc.dl  PrimOp-Prefetch.dl  PrimOp-Unsafe.dl
lambda/preprocess-ghc-primops/: GHCPrimOps.hs  Gen.hs  ghc-primop-gen.cabal
lambda/preprocess-ghc-primops/genprimopcode/: Parser.hs  Syntax.hs
lambda/src/Lambda/: Lint.hs  Parse.hs  Pretty.hs  Syntax.hs  TH.hs  Util.hs
lambda/src/Lambda/Analysis/: ControlFlowAnalysisM.hs
lambda/src/Lambda/Datalog/: ToDatalog.hs
lambda/src/Lambda/GHC/: RtsAbstractModel.hs
lambda/src/Lambda/Stg/: FromStg.hs  GHCPrimOps.hs  StripDeadCode.hs
lambda/src/Lambda/Transformation/: ClosureConversion.hs  StaticSingleAssignment.hs
lambda/src/Transformations/: Names.hs  Util.hs
lambda/test/: CBySpec.hs  CFASpec.hs  ParserSpec.hs  PrimOpArraySpec.hs  PrimOpCCSSpec.hs  PrimOpExceptionSpec.hs  PrimOpMVarSpec.hs  PrimOpMutVarSpec.hs  PrimOpSTMSpec.hs  PrimOpStablePtrSpec.hs  PrimOpWeakPtrSpec.hs
mod-pak/: mod-pak.cabal  stack.yaml
mod-pak/app/: mkmodpak.hs  zip-cmd.hs
tooling/external-stg/: external-stg.cabal
tooling/external-stg/app/: ext-stg.hs
tooling/external-stg/lib/Stg/: Syntax.hs
wpc-plugin/: CHANGELOG.md  cabal.project  external-stg-syntax  hie.yaml  stack.yaml  wpc-plugin.cabal
wpc-plugin/src/WPC/: Foreign.hs  ForeignStubDecls.hs  GhcStgApp.hs  GlobalEnv.hs  Modpak.hs  Plugin.hs  StgToExtStg.hs  Stubs.hs  Yaml.hs
(+13 files in other folders)
