cabal-version:       3.0
name:                external-stg-interpreter
version:             0.1.0.1
synopsis:            External STG interpreter

license:             BSD-3-Clause
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2020 Csaba Hruska
category:            Development
build-type:          Simple

common lang
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies

library
  hs-source-dirs:      lib
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    TypeFamilies
    MultiWayIf
    PatternSynonyms
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -- -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies
  ghc-options:         -fobject-code -O2
  build-depends:       base,
                       time,
                       unix,
                       filepath,
                       directory,
                       libffi,
                       zip,
                       yaml,
                       text,
                       bytestring,
                       containers,
                       transformers,
                       primitive,
                       vector,
                       mtl,
                       inline-c,
                       unagi-chan,
                       pretty-terminal,
                       pretty-simple,
                       bimap,
                       souffle-haskell,
                       external-stg-syntax,
                       external-stg
  exposed-modules:
    Foreign.LibFFI.Closure

    Stg.Interpreter
    Stg.Interpreter.Base
    Stg.Interpreter.FFI
    Stg.Interpreter.PrimCall
    Stg.Interpreter.Rts
    Stg.Interpreter.RtsFFI
    Stg.Interpreter.EmulatedLibFFI
    Stg.Interpreter.Debug
    Stg.Interpreter.IOManager
    Stg.Interpreter.ThreadScheduler
    Stg.Interpreter.Debugger
    Stg.Interpreter.Debugger.Datalog
    Stg.Interpreter.Debugger.Internal
    Stg.Interpreter.Debugger.Region
    Stg.Interpreter.Debugger.UI
    Stg.Interpreter.Debugger.TraverseState
    Stg.Interpreter.Debugger.Retainer
    Stg.Interpreter.GC
    Stg.Interpreter.GC.GCRef
    Stg.Interpreter.GC.LiveDataAnalysis
    Stg.Interpreter.GC.RetainerAnalysis
    Stg.Interpreter.GC.DeadlockAnalysis
    Stg.Interpreter.PrimOp.Addr
    Stg.Interpreter.PrimOp.ArrayArray
    Stg.Interpreter.PrimOp.Array
    Stg.Interpreter.PrimOp.ByteArray
    Stg.Interpreter.PrimOp.Char
    Stg.Interpreter.PrimOp.Compact
    Stg.Interpreter.PrimOp.Concurrency
    Stg.Interpreter.PrimOp.DelayWait
    Stg.Interpreter.PrimOp.Double
    Stg.Interpreter.PrimOp.Exceptions
    Stg.Interpreter.PrimOp.Float
    Stg.Interpreter.PrimOp.GHCiBytecode
    Stg.Interpreter.PrimOp.InfoTableOrigin
    Stg.Interpreter.PrimOp.Int64
    Stg.Interpreter.PrimOp.Int32
    Stg.Interpreter.PrimOp.Int16
    Stg.Interpreter.PrimOp.Int8
    Stg.Interpreter.PrimOp.Int
    Stg.Interpreter.PrimOp.MiscEtc
    Stg.Interpreter.PrimOp.MutVar
    Stg.Interpreter.PrimOp.MVar
    Stg.Interpreter.PrimOp.Narrowings
    Stg.Interpreter.PrimOp.ObjectLifetime
    Stg.Interpreter.PrimOp.Parallelism
    Stg.Interpreter.PrimOp.Prefetch
    Stg.Interpreter.PrimOp.SmallArray
    Stg.Interpreter.PrimOp.StablePointer
    Stg.Interpreter.PrimOp.STM
    Stg.Interpreter.PrimOp.TagToEnum
    Stg.Interpreter.PrimOp.Unsafe
    Stg.Interpreter.PrimOp.WeakPointer
    Stg.Interpreter.PrimOp.Word64
    Stg.Interpreter.PrimOp.Word32
    Stg.Interpreter.PrimOp.Word16
    Stg.Interpreter.PrimOp.Word8
    Stg.Interpreter.PrimOp.Word

  include-dirs:        
    datalog
    /home/ilya/projects/ghc-whole-program-compiler-project/souffle/src/include
  cxx-options:          -D__EMBEDDED_SOUFFLE__ -std=c++17 -Wno-deprecated-declarations
  cxx-sources:          datalog/ext-stg-gc.cpp

executable ext-stg-interpreter
  import:              lang
  hs-source-dirs:      app
  main-is:             ExtStgInterpreter.hs
  build-depends:       base < 5.0,
                       unagi-chan,
                       shellwords,
                       optparse-applicative,
                       external-stg-interpreter

  ghc-options: -rtsopts -threaded

executable run-stgi-testsuite
  import:              lang
  hs-source-dirs:      app
  main-is:             RunStgiTestsuite.hs
  build-depends:       base < 5.0,
                       containers,
                       filepath,
                       directory,
                       bytestring,
                       prettyprinter,
                       prettyprinter-ansi-terminal,
                       timeit,
                       filemanip,
                       async-pool,
                       process

  ghc-options: -rtsopts -threaded

test-suite primop-test
  import:              lang
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.11
                     , mtl
                     , external-stg-syntax
                     , external-stg-interpreter
                     , hspec
                     , QuickCheck

  other-modules:       PrimOp.Word8Spec
                       PrimOp.Word16Spec
                       PrimOp.IntSpec
                       PrimOp.Int8Spec
                       PrimOp.Int16Spec
                       PrimOp.CharSpec
                       PrimOp.NarrowingsSpec
                       PrimOp.FloatSpec
                       PrimOp.DoubleSpec
                       PrimOp.WordSpec
                       PrimOp.AddrSpec
