cabal-version:       3.0
name:                external-stg-interpreter
version:             0.1.0.1
synopsis:            External STG interpreter

license:             BSD-3-Clause
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2020 Csaba Hruska
category:            Development
build-type:          Simple

extra-source-files:
  souffle/src/include/souffle/BinaryConstraintOps.h
  souffle/src/include/souffle/CompiledOptions.h
  souffle/src/include/souffle/CompiledSouffle.h
  souffle/src/include/souffle/RamTypes.h
  souffle/src/include/souffle/RecordTable.h
  souffle/src/include/souffle/SignalHandler.h
  souffle/src/include/souffle/SouffleFunctor.h
  souffle/src/include/souffle/SouffleInterface.h
  souffle/src/include/souffle/SymbolTable.h
  souffle/src/include/souffle/TypeAttribute.h
  souffle/src/include/souffle/datastructure/Brie.h
  souffle/src/include/souffle/datastructure/BTreeDelete.h
  souffle/src/include/souffle/datastructure/BTree.h
  souffle/src/include/souffle/datastructure/BTreeUtil.h
  souffle/src/include/souffle/datastructure/ConcurrentCache.h
  souffle/src/include/souffle/datastructure/ConcurrentFlyweight.h
  souffle/src/include/souffle/datastructure/ConcurrentInsertOnlyHashMap.h
  souffle/src/include/souffle/datastructure/EqRel.h
  souffle/src/include/souffle/datastructure/EquivalenceRelation.h
  souffle/src/include/souffle/datastructure/Graph.h
  souffle/src/include/souffle/datastructure/Info.h
  souffle/src/include/souffle/datastructure/LambdaBTree.h
  souffle/src/include/souffle/datastructure/Nullaries.h
  souffle/src/include/souffle/datastructure/PiggyList.h
  souffle/src/include/souffle/datastructure/RecordTableImpl.h
  souffle/src/include/souffle/datastructure/SymbolTableImpl.h
  souffle/src/include/souffle/datastructure/Table.h
  souffle/src/include/souffle/datastructure/UnionFind.h
  souffle/src/include/souffle/io/gzfstream.h
  souffle/src/include/souffle/io/IOSystem.h
  souffle/src/include/souffle/io/ReadStreamCSV.h
  souffle/src/include/souffle/io/ReadStream.h
  souffle/src/include/souffle/io/ReadStreamJSON.h
  souffle/src/include/souffle/io/ReadStreamSQLite.h
  souffle/src/include/souffle/io/SerialisationStream.h
  souffle/src/include/souffle/io/WriteStreamCSV.h
  souffle/src/include/souffle/io/WriteStream.h
  souffle/src/include/souffle/io/WriteStreamJSON.h
  souffle/src/include/souffle/io/WriteStreamSQLite.h
  souffle/src/include/souffle/profile/Cell.h
  souffle/src/include/souffle/profile/CellInterface.h
  souffle/src/include/souffle/profile/Cli.h
  souffle/src/include/souffle/profile/DataComparator.h
  souffle/src/include/souffle/profile/EventProcessor.h
  souffle/src/include/souffle/profile/htmlCssChartist.h
  souffle/src/include/souffle/profile/htmlCssStyle.h
  souffle/src/include/souffle/profile/HtmlGenerator.h
  souffle/src/include/souffle/profile/htmlJsChartistMin.h
  souffle/src/include/souffle/profile/htmlJsChartistPlugin.h
  souffle/src/include/souffle/profile/htmlJsMain.h
  souffle/src/include/souffle/profile/htmlJsTableSort.h
  souffle/src/include/souffle/profile/htmlJsUtil.h
  souffle/src/include/souffle/profile/htmlMain.h
  souffle/src/include/souffle/profile/Iteration.h
  souffle/src/include/souffle/profile/Logger.h
  souffle/src/include/souffle/profile/OutputProcessor.h
  souffle/src/include/souffle/profile/ProfileDatabase.h
  souffle/src/include/souffle/profile/ProfileEvent.h
  souffle/src/include/souffle/profile/ProgramRun.h
  souffle/src/include/souffle/profile/Reader.h
  souffle/src/include/souffle/profile/Relation.h
  souffle/src/include/souffle/profile/Row.h
  souffle/src/include/souffle/profile/Rule.h
  souffle/src/include/souffle/profile/StringUtils.h
  souffle/src/include/souffle/profile/Table.h
  souffle/src/include/souffle/profile/Tui.h
  souffle/src/include/souffle/profile/UserInputReader.h
  souffle/src/include/souffle/provenance/Explain.h
  souffle/src/include/souffle/provenance/ExplainProvenance.h
  souffle/src/include/souffle/provenance/ExplainProvenanceImpl.h
  souffle/src/include/souffle/provenance/ExplainTree.h
  souffle/src/include/souffle/swig/SwigInterface.h
  souffle/src/include/souffle/swig/SwigInterface.i
  souffle/src/include/souffle/utility/CacheUtil.h
  souffle/src/include/souffle/utility/ContainerUtil.h
  souffle/src/include/souffle/utility/DynamicCasting.h
  souffle/src/include/souffle/utility/EvaluatorUtil.h
  souffle/src/include/souffle/utility/FileUtil.h
  souffle/src/include/souffle/utility/FunctionalUtil.h
  souffle/src/include/souffle/utility/General.h
  souffle/src/include/souffle/utility/GetOptLong.h
  souffle/src/include/souffle/utility/GetOptLongImpl.h
  souffle/src/include/souffle/utility/Iteration.h
  souffle/src/include/souffle/utility/json11.h
  souffle/src/include/souffle/utility/MiscUtil.h
  souffle/src/include/souffle/utility/NodeMapperFwd.h
  souffle/src/include/souffle/utility/NodeMapper.h
  souffle/src/include/souffle/utility/ParallelUtil.h
  souffle/src/include/souffle/utility/span.h
  souffle/src/include/souffle/utility/StreamUtil.h
  souffle/src/include/souffle/utility/StringUtil.h
  souffle/src/include/souffle/utility/SubProcess.h
  souffle/src/include/souffle/utility/SubsetCache.h
  souffle/src/include/souffle/utility/tinyformat.h
  souffle/src/include/souffle/utility/Types.h
  souffle/src/include/souffle/utility/VisitorFwd.h
  souffle/src/include/souffle/utility/Visitor.h

common lang
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies

library
  hs-source-dirs:      lib
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    TypeFamilies
    MultiWayIf
    PatternSynonyms
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -- -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies
  ghc-options:         -fobject-code -O2
  build-depends:       base,
                       time,
                       unix,
                       filepath,
                       directory,
                       libffi,
                       zip,
                       yaml,
                       text,
                       bytestring,
                       containers,
                       transformers,
                       primitive,
                       vector,
                       mtl,
                       inline-c,
                       unagi-chan,
                       pretty-terminal,
                       pretty-simple,
                       bimap,
                       souffle-haskell,
                       external-stg-syntax,
                       external-stg
  exposed-modules:
    Foreign.LibFFI.Closure

    Stg.Interpreter
    Stg.Interpreter.Base
    Stg.Interpreter.FFI
    Stg.Interpreter.PrimCall
    Stg.Interpreter.Rts
    Stg.Interpreter.RtsFFI
    Stg.Interpreter.EmulatedLibFFI
    Stg.Interpreter.Debug
    Stg.Interpreter.IOManager
    Stg.Interpreter.ThreadScheduler
    Stg.Interpreter.Debugger
    Stg.Interpreter.Debugger.Datalog
    Stg.Interpreter.Debugger.Internal
    Stg.Interpreter.Debugger.Region
    Stg.Interpreter.Debugger.UI
    Stg.Interpreter.Debugger.TraverseState
    Stg.Interpreter.Debugger.Retainer
    Stg.Interpreter.GC
    Stg.Interpreter.GC.GCRef
    Stg.Interpreter.GC.LiveDataAnalysis
    Stg.Interpreter.GC.RetainerAnalysis
    Stg.Interpreter.GC.DeadlockAnalysis
    Stg.Interpreter.PrimOp.Addr
    Stg.Interpreter.PrimOp.ArrayArray
    Stg.Interpreter.PrimOp.Array
    Stg.Interpreter.PrimOp.ByteArray
    Stg.Interpreter.PrimOp.Char
    Stg.Interpreter.PrimOp.Compact
    Stg.Interpreter.PrimOp.Concurrency
    Stg.Interpreter.PrimOp.DelayWait
    Stg.Interpreter.PrimOp.Double
    Stg.Interpreter.PrimOp.Exceptions
    Stg.Interpreter.PrimOp.Float
    Stg.Interpreter.PrimOp.GHCiBytecode
    Stg.Interpreter.PrimOp.InfoTableOrigin
    Stg.Interpreter.PrimOp.Int64
    Stg.Interpreter.PrimOp.Int32
    Stg.Interpreter.PrimOp.Int16
    Stg.Interpreter.PrimOp.Int8
    Stg.Interpreter.PrimOp.Int
    Stg.Interpreter.PrimOp.MiscEtc
    Stg.Interpreter.PrimOp.MutVar
    Stg.Interpreter.PrimOp.MVar
    Stg.Interpreter.PrimOp.Narrowings
    Stg.Interpreter.PrimOp.ObjectLifetime
    Stg.Interpreter.PrimOp.Parallelism
    Stg.Interpreter.PrimOp.Prefetch
    Stg.Interpreter.PrimOp.SmallArray
    Stg.Interpreter.PrimOp.StablePointer
    Stg.Interpreter.PrimOp.STM
    Stg.Interpreter.PrimOp.TagToEnum
    Stg.Interpreter.PrimOp.Unsafe
    Stg.Interpreter.PrimOp.WeakPointer
    Stg.Interpreter.PrimOp.Word64
    Stg.Interpreter.PrimOp.Word32
    Stg.Interpreter.PrimOp.Word16
    Stg.Interpreter.PrimOp.Word8
    Stg.Interpreter.PrimOp.Word
  
  install-includes:
    souffle/src/include/souffle/BinaryConstraintOps.h
    souffle/src/include/souffle/CompiledOptions.h
    souffle/src/include/souffle/CompiledSouffle.h
    souffle/src/include/souffle/RamTypes.h
    souffle/src/include/souffle/RecordTable.h
    souffle/src/include/souffle/SignalHandler.h
    souffle/src/include/souffle/SouffleFunctor.h
    souffle/src/include/souffle/SouffleInterface.h
    souffle/src/include/souffle/SymbolTable.h
    souffle/src/include/souffle/TypeAttribute.h
    souffle/src/include/souffle/datastructure/Brie.h
    souffle/src/include/souffle/datastructure/BTreeDelete.h
    souffle/src/include/souffle/datastructure/BTree.h
    souffle/src/include/souffle/datastructure/BTreeUtil.h
    souffle/src/include/souffle/datastructure/ConcurrentCache.h
    souffle/src/include/souffle/datastructure/ConcurrentFlyweight.h
    souffle/src/include/souffle/datastructure/ConcurrentInsertOnlyHashMap.h
    souffle/src/include/souffle/datastructure/EqRel.h
    souffle/src/include/souffle/datastructure/EquivalenceRelation.h
    souffle/src/include/souffle/datastructure/Graph.h
    souffle/src/include/souffle/datastructure/Info.h
    souffle/src/include/souffle/datastructure/LambdaBTree.h
    souffle/src/include/souffle/datastructure/Nullaries.h
    souffle/src/include/souffle/datastructure/PiggyList.h
    souffle/src/include/souffle/datastructure/RecordTableImpl.h
    souffle/src/include/souffle/datastructure/SymbolTableImpl.h
    souffle/src/include/souffle/datastructure/Table.h
    souffle/src/include/souffle/datastructure/UnionFind.h
    souffle/src/include/souffle/io/gzfstream.h
    souffle/src/include/souffle/io/IOSystem.h
    souffle/src/include/souffle/io/ReadStreamCSV.h
    souffle/src/include/souffle/io/ReadStream.h
    souffle/src/include/souffle/io/ReadStreamJSON.h
    souffle/src/include/souffle/io/ReadStreamSQLite.h
    souffle/src/include/souffle/io/SerialisationStream.h
    souffle/src/include/souffle/io/WriteStreamCSV.h
    souffle/src/include/souffle/io/WriteStream.h
    souffle/src/include/souffle/io/WriteStreamJSON.h
    souffle/src/include/souffle/io/WriteStreamSQLite.h
    souffle/src/include/souffle/profile/Cell.h
    souffle/src/include/souffle/profile/CellInterface.h
    souffle/src/include/souffle/profile/Cli.h
    souffle/src/include/souffle/profile/DataComparator.h
    souffle/src/include/souffle/profile/EventProcessor.h
    souffle/src/include/souffle/profile/htmlCssChartist.h
    souffle/src/include/souffle/profile/htmlCssStyle.h
    souffle/src/include/souffle/profile/HtmlGenerator.h
    souffle/src/include/souffle/profile/htmlJsChartistMin.h
    souffle/src/include/souffle/profile/htmlJsChartistPlugin.h
    souffle/src/include/souffle/profile/htmlJsMain.h
    souffle/src/include/souffle/profile/htmlJsTableSort.h
    souffle/src/include/souffle/profile/htmlJsUtil.h
    souffle/src/include/souffle/profile/htmlMain.h
    souffle/src/include/souffle/profile/Iteration.h
    souffle/src/include/souffle/profile/Logger.h
    souffle/src/include/souffle/profile/OutputProcessor.h
    souffle/src/include/souffle/profile/ProfileDatabase.h
    souffle/src/include/souffle/profile/ProfileEvent.h
    souffle/src/include/souffle/profile/ProgramRun.h
    souffle/src/include/souffle/profile/Reader.h
    souffle/src/include/souffle/profile/Relation.h
    souffle/src/include/souffle/profile/Row.h
    souffle/src/include/souffle/profile/Rule.h
    souffle/src/include/souffle/profile/StringUtils.h
    souffle/src/include/souffle/profile/Table.h
    souffle/src/include/souffle/profile/Tui.h
    souffle/src/include/souffle/profile/UserInputReader.h
    souffle/src/include/souffle/provenance/Explain.h
    souffle/src/include/souffle/provenance/ExplainProvenance.h
    souffle/src/include/souffle/provenance/ExplainProvenanceImpl.h
    souffle/src/include/souffle/provenance/ExplainTree.h
    souffle/src/include/souffle/swig/SwigInterface.h
    souffle/src/include/souffle/swig/SwigInterface.i
    souffle/src/include/souffle/utility/CacheUtil.h
    souffle/src/include/souffle/utility/ContainerUtil.h
    souffle/src/include/souffle/utility/DynamicCasting.h
    souffle/src/include/souffle/utility/EvaluatorUtil.h
    souffle/src/include/souffle/utility/FileUtil.h
    souffle/src/include/souffle/utility/FunctionalUtil.h
    souffle/src/include/souffle/utility/General.h
    souffle/src/include/souffle/utility/GetOptLong.h
    souffle/src/include/souffle/utility/GetOptLongImpl.h
    souffle/src/include/souffle/utility/Iteration.h
    souffle/src/include/souffle/utility/json11.h
    souffle/src/include/souffle/utility/MiscUtil.h
    souffle/src/include/souffle/utility/NodeMapperFwd.h
    souffle/src/include/souffle/utility/NodeMapper.h
    souffle/src/include/souffle/utility/ParallelUtil.h
    souffle/src/include/souffle/utility/span.h
    souffle/src/include/souffle/utility/StreamUtil.h
    souffle/src/include/souffle/utility/StringUtil.h
    souffle/src/include/souffle/utility/SubProcess.h
    souffle/src/include/souffle/utility/SubsetCache.h
    souffle/src/include/souffle/utility/tinyformat.h
    souffle/src/include/souffle/utility/Types.h
    souffle/src/include/souffle/utility/VisitorFwd.h
    souffle/src/include/souffle/utility/Visitor.h

  include-dirs:        
    datalog
    souffle/src/include
  cxx-options:          -D__EMBEDDED_SOUFFLE__ -std=c++17 -Wno-deprecated-declarations
  cxx-sources:          datalog/ext-stg-gc.cpp


executable ext-stg-interpreter
  import:              lang
  hs-source-dirs:      app
  main-is:             ExtStgInterpreter.hs
  build-depends:       base < 5.0,
                       unagi-chan,
                       shellwords,
                       optparse-applicative,
                       external-stg-interpreter

  ghc-options: -rtsopts -threaded

executable run-stgi-testsuite
  import:              lang
  hs-source-dirs:      app
  main-is:             RunStgiTestsuite.hs
  build-depends:       base < 5.0,
                       containers,
                       filepath,
                       directory,
                       bytestring,
                       prettyprinter,
                       prettyprinter-ansi-terminal,
                       timeit,
                       filemanip,
                       async-pool,
                       process

  ghc-options: -rtsopts -threaded

test-suite primop-test
  import:              lang
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.11
                     , mtl
                     , external-stg-syntax
                     , external-stg-interpreter
                     , hspec
                     , QuickCheck

  other-modules:       PrimOp.Word8Spec
                       PrimOp.Word16Spec
                       PrimOp.IntSpec
                       PrimOp.Int8Spec
                       PrimOp.Int16Spec
                       PrimOp.CharSpec
                       PrimOp.NarrowingsSpec
                       PrimOp.FloatSpec
                       PrimOp.DoubleSpec
                       PrimOp.WordSpec
                       PrimOp.AddrSpec
