cabal-version:       3.14
name:                external-stg-interpreter
version:             0.1.0.1
synopsis:            External STG interpreter

license:             BSD-3-Clause
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2020 Csaba Hruska
category:            Development
build-type:          Simple

data-files:
  datalog/*.dl
  datalog/**/*.dl

extra-source-files:
  souffle/src/include/souffle/*.h
  souffle/src/include/souffle/**/*.h
  souffle/src/include/souffle/swig/SwigInterface.i

common lang
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies

library
  hs-source-dirs: lib
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    TypeFamilies
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -- -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies
  ghc-options:         -fobject-code -O2
  build-depends:
    base,
    bimap,
    bytestring,
    containers,
    directory,
    external-stg,
    external-stg-syntax,
    filepath,
    inline-c,
    libffi,
    mtl,
    pretty-simple,
    pretty-terminal,
    primitive,
    souffle-haskell,
    text,
    time,
    transformers,
    unagi-chan,
    unix,
    vector,
    yaml,
    zip
  exposed-modules:
    Foreign.LibFFI.Closure

    Stg.Interpreter
    Stg.Interpreter.Base
    Stg.Interpreter.Debug
    Stg.Interpreter.Debugger
    Stg.Interpreter.Debugger.Datalog
    Stg.Interpreter.Debugger.Internal
    Stg.Interpreter.Debugger.Region
    Stg.Interpreter.Debugger.Retainer
    Stg.Interpreter.Debugger.TraverseState
    Stg.Interpreter.Debugger.UI
    Stg.Interpreter.EmulatedLibFFI
    Stg.Interpreter.FFI
    Stg.Interpreter.GC
    Stg.Interpreter.GC.DeadlockAnalysis
    Stg.Interpreter.GC.GCRef
    Stg.Interpreter.GC.LiveDataAnalysis
    Stg.Interpreter.GC.RetainerAnalysis
    Stg.Interpreter.IOManager
    Stg.Interpreter.PrimCall
    Stg.Interpreter.PrimOp.Addr
    Stg.Interpreter.PrimOp.Array
    Stg.Interpreter.PrimOp.ArrayArray
    Stg.Interpreter.PrimOp.ByteArray
    Stg.Interpreter.PrimOp.Char
    Stg.Interpreter.PrimOp.Compact
    Stg.Interpreter.PrimOp.Concurrency
    Stg.Interpreter.PrimOp.DelayWait
    Stg.Interpreter.PrimOp.Double
    Stg.Interpreter.PrimOp.Exceptions
    Stg.Interpreter.PrimOp.Float
    Stg.Interpreter.PrimOp.GHCiBytecode
    Stg.Interpreter.PrimOp.InfoTableOrigin
    Stg.Interpreter.PrimOp.Int
    Stg.Interpreter.PrimOp.Int16
    Stg.Interpreter.PrimOp.Int32
    Stg.Interpreter.PrimOp.Int64
    Stg.Interpreter.PrimOp.Int8
    Stg.Interpreter.PrimOp.MVar
    Stg.Interpreter.PrimOp.MiscEtc
    Stg.Interpreter.PrimOp.MutVar
    Stg.Interpreter.PrimOp.Narrowings
    Stg.Interpreter.PrimOp.ObjectLifetime
    Stg.Interpreter.PrimOp.Parallelism
    Stg.Interpreter.PrimOp.Prefetch
    Stg.Interpreter.PrimOp.STM
    Stg.Interpreter.PrimOp.SmallArray
    Stg.Interpreter.PrimOp.StablePointer
    Stg.Interpreter.PrimOp.TagToEnum
    Stg.Interpreter.PrimOp.Unsafe
    Stg.Interpreter.PrimOp.WeakPointer
    Stg.Interpreter.PrimOp.Word
    Stg.Interpreter.PrimOp.Word16
    Stg.Interpreter.PrimOp.Word32
    Stg.Interpreter.PrimOp.Word64
    Stg.Interpreter.PrimOp.Word8
    Stg.Interpreter.Rts
    Stg.Interpreter.RtsFFI
    Stg.Interpreter.ThreadScheduler
  
  include-dirs:        
    datalog
    souffle/src/include
  cxx-options: -D__EMBEDDED_SOUFFLE__ -std=c++17 -Wno-deprecated-declarations
  cxx-sources: datalog/ext-stg-gc.cpp


executable ext-stg-interpreter
  import: lang
  hs-source-dirs: app
  main-is: ExtStgInterpreter.hs
  build-depends:
    base < 5.0,
    external-stg-interpreter,
    optparse-applicative,
    shellwords,
    unagi-chan
  include-dirs:        
    datalog
    souffle/src/include
  cxx-options: -D__EMBEDDED_SOUFFLE__ -std=c++17 -Wno-deprecated-declarations
  cxx-sources: datalog/ext-stg-gc.cpp
  ghc-options: -rtsopts -threaded

executable run-stgi-testsuite
  import: lang
  hs-source-dirs: app
  main-is: RunStgiTestsuite.hs
  build-depends:
    async-pool,
    base < 5.0,
    bytestring,
    containers,
    directory,
    filemanip,
    filepath,
    prettyprinter,
    prettyprinter-ansi-terminal,
    process,
    timeit
  ghc-options: -rtsopts -threaded

test-suite primop-test
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base >=4.11,
    external-stg-interpreter,
    external-stg-syntax,
    hspec,
    mtl,
    QuickCheck

  other-modules:
    PrimOp.AddrSpec
    PrimOp.CharSpec
    PrimOp.DoubleSpec
    PrimOp.FloatSpec
    PrimOp.Int16Spec
    PrimOp.Int8Spec
    PrimOp.IntSpec
    PrimOp.NarrowingsSpec
    PrimOp.Word16Spec
    PrimOp.Word8Spec
    PrimOp.WordSpec
