cabal-version:       2.4
name:                external-stg-syntax
version:             1.0.2
synopsis:            GHC independent STG IR definition

license:             BSD-3-Clause
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2022 Csaba Hruska
category:            Development
build-type:          Simple

common lang
  default-language: GHC2024
  default-extensions:
    AllowAmbiguousTypes
    DeriveAnyClass
    DerivingVia
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    NoStarIsType
    OverloadedStrings
    RecordWildCards
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns
    MultiWayIf
    ImplicitParams
    PatternSynonyms
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies


library
  import:              lang
  exposed-modules:     Stg.Syntax
  hs-source-dirs:      lib
  build-depends:       base,
                       bytestring,
                       binary
