cabal-version:       3.0
name:                external-stg-syntax
version:             1.0.2
synopsis:            GHC independent STG IR definition

license:             BSD-3-Clause
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2022 Csaba Hruska
category:            Development
build-type:          Simple

library
  default-language: GHC2021
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
    MultiWayIf
    TupleSections
    ImplicitParams
    NamedFieldPuns
    PatternGuards
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies
  exposed-modules:     Stg.Syntax
  hs-source-dirs:      lib
  build-depends:       base,
                       bytestring,
                       binary
