cabal-version:       3.14
name:                external-stg-syntax
version:             1.0.2
synopsis:            GHC independent STG IR definition

license:             BSD-3-Clause
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2022 Csaba Hruska
category:            Development
build-type:          Simple

library
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies
  exposed-modules:     Stg.Syntax
  hs-source-dirs:      lib
  build-depends:       base,
                       bytestring,
                       binary
