name:                external-stg
version:             0.1.0.1
synopsis:            A library to dump GHC's STG representation.

license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2018 Csaba Hruska
category:            Development
build-type:          Simple
tested-with:         GHC==8.8.3
cabal-version:       >=1.10

library
  exposed-modules:
    Stg.Pretty
    Stg.Reconstruct
    Stg.Deconstruct
    Stg.Syntax
    Stg.Program
    Stg.IO
    Stg.GHC.Symbols
    Stg.JSON
    Stg.Analysis.LiveVariable
    Stg.Analysis.Closure
  hs-source-dirs:      lib
  ghc-options:         -Wall
  cpp-options:         -DEXTERNAL_STG_PACKAGE
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base,
                       bytestring,
                       filemanip,
                       filepath,
                       directory,
                       binary,
                       containers,
                       transformers,
                       unordered-containers,
                       hashable,
                       ansi-wl-pprint,
                       zip,
                       text,
                       aeson
  default-language:    Haskell2010

executable ext-stg
  hs-source-dirs:      app
  main-is:             ext-stg.hs
  build-depends:       base < 5.0,
                       external-stg,
                       ansi-wl-pprint,
                       bytestring,
                       optparse-applicative
  default-language:    Haskell2010

executable fullpak
  hs-source-dirs:      app
  main-is:             fullpak.hs
  build-depends:       base < 5.0,
                       external-stg,
                       optparse-applicative
  default-language:    Haskell2010

executable mkfullpak
  hs-source-dirs:      app
  main-is:             mkfullpak.hs
  build-depends:       base
                     , containers
                     , exceptions
                     , optparse-applicative
                     , filepath
                     , bytestring
                     , zip
                     , external-stg
  default-language:    Haskell2010
